ingress/ip-redirect-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ip-redirect-ingress
  annotations:
    nginx.ingress.kubernetes.io/server-snippet: |
      return 301 https://lab.napskytech.com$request_uri;
spec:
  ingressClassName: public
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nginx-service
                port:
                  number: 80
